--- a/package.json
+++ b/package.json
@@ -1,21 +1,48 @@
 {
   "name": "@literallyjoel/router",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Bun router/controllers with Standard Schema validation",
   "type": "module",
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
-    ".": "./dist/index.js"
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "bun build ./src --outdir ./dist",
+    "build": "bun build ./src/index.ts --outdir ./dist --target bun --format esm && bun run build:types",
+    "build:types": "tsc --declaration --emitDeclarationOnly --outDir ./dist",
+    "prepublishOnly": "bun run build",
     "dev": "bun run ./src/dev.ts"
   },
   "dependencies": {
     "@standard-schema/spec": "^1.0.0"
   },
   "devDependencies": {
+    "@types/bun": "latest",
     "bun-types": "latest",
     "typescript": "^5.6.0"
+  },
+  "peerDependencies": {
+    "bun": ">=1.0.0"
+  },
+  "keywords": [
+    "bun",
+    "router",
+    "framework",
+    "standard-schema",
+    "validation",
+    "controller"
+  ],
+  "author": "literallyJoel",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/literallyjoel/router.git"
   }
 }
